GNOME Bugzilla – Bug 756454
Crash in ggit_signature_get_time on repo loading.
Last modified: 2016-04-26 17:33:30 UTC
I get a segfault on repo loading (same repo I had issues with in #748974). This occurred with gitg 3.18.0 on Arch.
+ Trace 235572
What version of libgit2-glib do you have?
Here are the package versions in Arch. libgit2 1:0.23.2-1 libgit2-glib 0.23.6-1
Same issue here (also on Arch with roughly the same package versions). Easily reproducible using Linus' kernel tree: $ git clone git://git.kernel.org/pub/scm/linux/kernel/git/torvalds/linux.git $ cd linux $ gitg
I have similar issue with g_date_time_to_timezone/g_date_time_to_instant in 3.18.0 on Fedora 23. https://bugzilla.redhat.com/show_bug.cgi?id=1294530
Created attachment 317984 [details] Backtrace
I have a similar one in Debian. I think it has a decent backtrace http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=809395 And, for me too, it happens on big repositories, like the Linux kernel.
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.
(In reply to jessevdk@gmail.com from comment #7) > This problem has been fixed in the unstable development version. The fix > will be available in the next major software release. You may need to > upgrade your Linux distribution to obtain that newer version. What version are you referring here ? Can you please specifically mention the version/commit ? On Debian, the crash was seen on 3.19.x.
As it says, it's just fixed and will be available in the next unstable release or stable release, meaning 3.19.4 or 3.20.x.
Jesse, The fix does not seem to be in gitg git master (as of today) or the 3.19.6 snapshot. (This is on Arch with gitg linked against a manually compiled gtk-3.19.11.) Might it be possible for you to post the patch for this bug here so that we can apply it ourselves? The bug is affecting our workflow and a temporary workaround while waiting for an officially released fix would be very useful. Thanks, Jaijeet
Even though I haven't compiled today's gitg master branch from commit messages down to 3.19.3 I cannot find anything that might address the problem in question. Any chance to get a pointer to commit that should fix this gitg failure?
I'm no longer seeing this issue with gitg 3.20.0.