Protected against empty signature

Bug https://bugzilla.gnome.org/show_bug.cgi?id=756454.